--- a/front-end/index.html
+++ b/front-end/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Optiwisdom</title>
+    <title>Employee Finder Project</title>
   </head>
   <body>
     <div id="root"></div>
